--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: pow_challenge
 description: A proof of work challenge written in pure dart.
 version: 1.0.0
 # homepage: https://www.example.com
+repository: https://github.com/InteractivePlus/pow_challenge
 
 environment:
   sdk: '>=2.15.1 <3.0.0'
